--- a/include/install
+++ b/include/install
@@ -27,8 +27,8 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
     sudo apt-get install tor -y
     echo "Setup tor/wallet configurations!"
     # tor group, user configuration
-    TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>&1)
-    sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>&1
+    TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>/dev/null)
+    sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>/dev/null
     # check torrc configuration
     if ! grep "15110 127.0.0.1:15110" /etc/tor/torrc &>/dev/null; then
       echo "RunAsDaemon 1
@@ -51,8 +51,8 @@ HiddenServicePort 80 127.0.0.1:80
     echo "Installing tor (proxy)"
     sudo apt-get install tor -y
     # tor group, user configuration
-    TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>&1)
-    sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>&1
+    TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>/dev/null)
+    sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>/dev/null
     # restart tor after configuration
     sudo service tor restart 2>&1
   fi
