--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222101
-# 0.1.7.4
+# 0.1.8.1
 
 source /home/pi/pitrump.conf
 source /usr/local/bin/include/color
@@ -29,6 +29,13 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
     # tor group, user configuration
     TORGROUP=$(stat -c '%G' /run/tor/control.authcookie 2>/dev/null)
     sudo usermod -a -G "${TORGROUP:?}" "$(whoami)" 2>/dev/null
+    read -r -p "[YN] Public .onion web server? y/n " -n 1 -r
+    echo
+    if [[ $REPLY =~ ^[Yy]$ ]] &>/dev/null; then
+      HIDDEN_SERVICE="HiddenServicePort 80 127.0.0.1:80"
+    else
+      HIDDEN_SERVICE="#HiddenServicePort 80 127.0.0.1:80"
+    fi
     # check torrc configuration
     if ! grep "15110 127.0.0.1:15110" /etc/tor/torrc &>/dev/null; then
       echo "RunAsDaemon 1
@@ -39,7 +46,7 @@ CookieAuthFileGroupReadable 1
 
 HiddenServiceDir /var/lib/tor/trumpcoin-service/
 HiddenServicePort 15110 127.0.0.1:15110
-HiddenServicePort 80 127.0.0.1:80
+${HIDDEN_SERVICE:?}
 " >/tmp/torrc 2>&1
       cat /tmp/torrc 2>/dev/null | sudo tee -a /etc/tor/torrc 2>&1
       # remove old files
