--- a/include/install
+++ b/include/install
@@ -2,12 +2,14 @@
 
 # By Rainman
 # V20222201
-# 0.1.7.3
+# 0.1.7.5
 
-# update configuration
-cp /home/"$(whoami)"/trump-node/pitrump.conf /usr/local/bin/include/pitrump.conf &>/dev/null
-
-source /usr/local/bin/include/pitrump.conf
+if [[ -f /usr/local/bin/include/pitrump.conf ]]; then
+  source /usr/local/bin/include/pitrump.conf
+else
+  sudo cp /home/"$(whoami)"/trump-node/pitrump.conf /usr/local/bin/include/pitrump.conf &>/dev/null
+  source /usr/local/bin/include/pitrump.conf
+fi
 source /usr/local/bin/include/color
 
 # date for logs
