--- a/include/install
+++ b/include/install
@@ -2,10 +2,13 @@
 
 # By Rainman
 # V20222201
-# 0.1.7.6
+# 0.1.7.9
 
 if [[ ! -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
   sudo cp /home/"$(whoami)"/trump-node/pitrump.conf /usr/local/bin/include/pitrump.conf 2>/dev/null
+  if [[ ! -f /home/"$(whoami)"/pitrump.conf ]]; then
+    sudo cp /home/"$(whoami)"/trump-node/pitrump.conf sudo cp /home/"$(whoami)"/pitrump.conf 2>/dev/null
+  fi
   if [[ -f /home/"$(whoami)"/pitrump.conf ]]; then
     sudo cp /home/"$(whoami)"/pitrump.conf /usr/local/bin/include/pitrump.conf 2>/dev/null
   fi
